# ChangeLog for net-im/kadu-core
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Feb 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta15.ebuild:
  Changed URI due to server problems.

*kadu-core-0.6.6_beta15 (06 Feb 2011)

  06 Feb 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta15.ebuild:
  Bumped.

*kadu-core-0.6.6_beta14_p2 (04 Jan 2011)

  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta14_p2.ebuild:
  Bumped.

*kadu-core-0.6.6_beta14 (04 Jan 2011)

  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta14.ebuild:
  Bumped.

*kadu-core-0.6.6_beta13 (22 Dec 2010)

  22 Dec 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta13.ebuild:
  Bumped.

*kadu-core-0.6.6_beta12 (07 Dec 2010)

  07 Dec 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta12.ebuild:
  Bumped.

*kadu-core-0.6.6_beta11 (22 Nov 2010)

  22 Nov 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta11.ebuild:
  Bumped.

*kadu-core-0.6.6_beta10 (08 Nov 2010)

  08 Nov 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta10.ebuild:
  Bumped.

*kadu-core-0.6.6_beta9 (26 Oct 2010)

  26 Oct 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta9.ebuild:
  Bumped.

*kadu-core-0.6.6_beta8 (12 Oct 2010)

  12 Oct 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta8.ebuild:
  Bumped.

*kadu-core-0.6.6_beta7 (15 Sep 2010)

  15 Sep 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta7.ebuild:
  Bumped.

*kadu-core-0.6.6_beta6 (31 Aug 2010)

  31 Aug 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.6_beta6.ebuild:
  Bumped.

  22 Aug 2010; Michał Ziąbkowski <mziab@o2.pl>
  kadu-core-0.6.5.4-r2.ebuild:
  Fixed typo.

  22 Aug 2010; Michał Ziąbkowski <mziab@o2.pl>
  kadu-core-0.6.5.4-r1.ebuild:
  Stabled -r1 with patched server list.

*kadu-core-0.6.5.4-r2 (22 Aug 2010)

  22 Aug 2010; Michał Ziąbkowski <mziab@o2.pl>