@@ -2,9 +2,9 @@ AUX 0.6.5.4-gg_servers.patch 2610 RMD160 bce9963df0d5d7a9eb9220fce8df2b3783ec36a
 AUX 0.6.5.4-glibc-2.12.patch 283 RMD160 590882f3b2affac0d7986ea5105f7ebb015bffab SHA1 bc9d8bd159a5636dff304d3a700bdb138a3c74ba SHA256 6a06e96d7e2dcdd275647ac479cce06ffc6ab4a9b6482d9950dbe249434d0ea9
 DIST kadu-0.6.5.4.tar.bz2 1774602 RMD160 5656b87e02952e6d47159996c86919d5d16973e4 SHA1 afd5b7d6c1568a3db03328d58d5ba6506dfa410f SHA256 9decd7b9de6d91095b4f6b47bebbbbc5ca56b9ba6e8f6ee80d8ad172ba676d25
 DIST kadu-0.6.6-beta15.tar.bz2 6659948 RMD160 78e5c3f7fee7dc482da619867d1a209eec882804 SHA1 c01e4b8e37ae280012d7c2fb937f530210941969 SHA256 6d6382f9fe7b23077d4491ffbc77d52c82cf33b9b87ffcb485477ba01262bd42
-EBUILD kadu-core-0.6.5.4-r1.ebuild 1104 RMD160 a4d10f50ca2b24b1dd24416b453191fb81f74c70 SHA1 ec26d50e6a90344ad6aa71674cc0c85757c9bb4c SHA256 305194450318380f8458126da701164e4f52dd321941ed4e023c0071bbebfcd7
-EBUILD kadu-core-0.6.5.4-r2.ebuild 1147 RMD160 bff44dbc2ef2d8d20f3046b918fde9380965db5f SHA1 dd892c069a286c5627bab0453ec0664c34c86bba SHA256 fe7d90471bb04b8375b98edaf014f0b695223787b17b3c0bb40e40844ccd9f98
-EBUILD kadu-core-0.6.5.4.ebuild 1026 RMD160 e3732fdf71c499fda518616e7a19dde9fa2c4ad4 SHA1 5b0f162c4ea07c82104989144926f1a0b0f44331 SHA256 d7b6669be0986bc6be39d4583508fb5e41fb54daf1f09c9dfabe9fbedcc20ffb
+EBUILD kadu-core-0.6.5.4-r1.ebuild 1084 RMD160 31dcecde3b346380c5471810146893558492afe6 SHA1 dc784eba71c51fb63d2fea6bf787ebcefa037889 SHA256 fb8b1402ff3ee5bcba94ec6604dc1705e93c5ee0027bb68fdc541c715f61a717
+EBUILD kadu-core-0.6.5.4-r2.ebuild 1127 RMD160 49155db4e5e00d476a3b7989a47a2f99c8e499c6 SHA1 b3c731f1751114a4c5de64c8969a62326918de5e SHA256 a98521c2df99977d8cadc8d676b08d1091de62502a5b0b16dccc9e930c26521a
+EBUILD kadu-core-0.6.5.4.ebuild 1006 RMD160 7bac668aca9057c2f6c34c700235dc834130c0ea SHA1 e110aec6e2ae6e16bdccc0c50eb294ee4c85c332 SHA256 35792ee59817581d239b7d1ac56e80ebaad30f5ddd2a9fd34d8549f2ff61530c
 EBUILD kadu-core-0.6.6_beta15.ebuild 969 RMD160 caf2c15f59ab139a6f87ea6cd50b7aa75a89f53b SHA1 f5800013d193f93afdeab4f5d3811bce17551e14 SHA256 6647e72b2defaab5dcd28fb2bc3d89dae7252f0d9d9dee8971244bf1476a79a5
-MISC ChangeLog 7914 RMD160 31c2d50555194b3b67a2913d4a727a6eef6818f6 SHA1 849da27a1917ac7ecf30357bb9c8b07574a5cb9b SHA256 d4afcf1318e6075549c7847b8afa04355c5723126f79f53703ff56a048714f78
+MISC ChangeLog 8098 RMD160 31a78094ae0060aa7b9a612ef69ffe57e37a6d21 SHA1 5d00191266a5db21266ed345aed2bb20d7b96b74 SHA256 ff2d2d51400a5407e81d43c800dbe1e6139d35942a3b7fb70345664b038dcb82
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
